# lite-bundle-size

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
lite_bundle_size/: __init__.py  core.py
tests/: test_lite_bundle_size.py
